--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "bitdevs-upgrade",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "summarize": "node --loader ts-node/esm ./scripts/summarize-md.ts"
   },
   "dependencies": {
     "@types/node": "20.4.1",
@@ -15,11 +17,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "ignore": "^5.2.4",
+    "langchain": "^0.0.112",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "ts-node": "^10.9.1",
     "typescript": "5.1.6"
   }
 }
