--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "bitdevs-upgrade",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -23,6 +22,8 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
