--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "gray-matter": "^4.0.3",
     "ignore": "^5.2.4",
     "langchain": "^0.0.112",
     "next": "13.4.9",
