Added bitcoin icons

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "summarize": "node --loader ts-node/esm ./scripts/summarize-md.ts"
   },
   "dependencies": {
+    "@bitcoin-design/bitcoin-icons-react": "^0.1.9",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
