--- a/package.json
+++ b/package.json
@@ -14,17 +14,26 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "gray-matter": "^4.0.3",
     "ignore": "^5.2.4",
     "langchain": "^0.0.112",
     "next": "13.4.9",
+    "next-contentlayer": "^0.3.4",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.10.0",
+    "rehype-slug": "^5.1.0",
     "remark": "^14.0.3",
+    "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
+    "shiki": "^0.14.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6"
