--- a/.github/workflows/process-event.yml
+++ b/.github/workflows/process-event.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'posts/new-event*.md'
+      - 'content/events/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]*.md'
 
 jobs:
   build:
