--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "langchain": "^0.0.112",
     "next": "13.4.9",
     "next-contentlayer": "^0.3.4",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
