--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gray-matter": "^4.0.3",
     "ignore": "^5.2.4",
     "langchain": "^0.0.112",
+    "marked": "^6.0.0",
+    "marked-mangle": "^1.1.0",
     "next": "13.4.9",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
@@ -36,6 +38,7 @@
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
     "shiki": "^0.14.3",
+    "strip-markdown": "^5.0.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "ts-node": "^10.9.1",
