--- a/.github/workflows/process-event.yml
+++ b/.github/workflows/process-event.yml
@@ -26,7 +26,7 @@ jobs:
         run: cd ai && yarn install --network-timeout 1000000
 
       - name: Build and Process new event
-        run: cd ai && yarn start
+        run: yarn summarize
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
