--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "summarize": "cp meetup.ts ai/src/meetup.ts && cp types/Meetup.ts ai/src/types/Meetup.ts && cd ai && yarn start",
     "summarizeold": "node --loader ts-node/esm ./scripts/summarize-md.ts",
     "update": "git clone https://github.com/atlantabitdevs/bitdevs-upgrade.git ./tmp-template && ncp ./tmp-template/ . --filter '^((?!content|public|summaries).)*$' && rimraf ./tmp-template",
-    "update:clean": "rimraf ./tmp-templat"
+    "update:clean": "rimraf ./tmp-template"
   },
   "dependencies": {
     "@bitcoin-design/bitcoin-icons-react": "^0.1.9",
