--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "summarize": "cp meetup.ts ai/src/meetup.ts && cp types/Meetup.ts ai/src/types/Meetup.ts && cd ai && yarn start",
-    "summarizeold": "node --loader ts-node/esm ./scripts/summarize-md.ts",
-    "update": "git clone https://github.com/atlantabitdevs/bitdevs-upgrade.git ./tmp-template && node upgrade.js",
-    "update:clean": "rimraf ./tmp-template"
+    "summarizeold": "node --loader ts-node/esm ./scripts/summarize-md.ts"
   },
   "dependencies": {
     "@bitcoin-design/bitcoin-icons-react": "^0.1.9",
@@ -28,7 +26,6 @@
     "langchain": "^0.0.112",
     "marked": "^6.0.0",
     "marked-mangle": "^1.1.0",
-    "ncp": "^2.0.0",
     "next": "13.4.9",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
